Switch to the patched version of kotlin-compile-testing (#143)